[project]
name = "graph-recsys"
version = "0.1.0"
requires-python = ">=3.10, <3.11"
dependencies = [
    "cython",
    "gdown",
    "hyperopt==0.2.7",
    "numpy==1.24",
    "pandas>=2.3.3",
    "pillow",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "setuptools<82",
    "torch==2.10",
    "torch-cluster>=1.6.1",
    "torch-geometric>=2.3.1",
    "torch-scatter>=2.1.1",
    "torch-sparse>=0.6.17",
    "torch-spline-conv>=1.2.2",
    "torchvision",
    "tqdm",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
torch-cluster = ["torch"]
torch-spline-conv = ["torch"]
